manifests/exercises/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: images-svc
            port:
              number: 2335

      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-svc
            port:
              number: 2355
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2300
